--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
             </nav>
 
             <div class="movie-container">
-                <div class="movie-info">
-                    <h2>Title</h2>
-                    <p>2022 7.5</p>
-                    <p><span>Genre</span></p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quos, nisi, omnis, assumenda ex amet ratione molestiae sunt deleniti qui pariatur officiis eius ipsam! Aperiam suscipit illo ex nulla ipsa?</p>
-                    <button>Watch Now</button>
-                </div>
+                <div class="movie-info"></div>
             </div>
         </div>
 
